--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <div class="exps">
                 <div class="exp">
                     <h3>IT Intern - Lavner Education</h3>
+                    <h4>&#40;June 2022 - August 2022&#41;</h4>
                     <p>Wrote at least 10 unit tests per day to provide code coverage on camp hardware, 
                         Instructed 200+ students on various technology topics and coding (Java, C++, Scratch), 
                         Awarded Instructor of the Month for providing outstanding instruction,
@@ -58,6 +59,7 @@
 
                 <div class="exp">
                     <h3>Customer Service Rep - South Bellevue Community Center</h3>
+                    <h4>&#40;October 2021 - Present&#41;</h4>
                     <p>Increased membership sign-up rate by 7.5% from previous year, 
                         Utilize BlueRec Recreation Management System to register new members, 
                         checkout equipment, sell gym passes, and update account info, 
@@ -69,6 +71,7 @@
 
                 <div class="exp">
                     <h3>Office Assistant - Capital Industries</h3>
+                    <h4>&#40;June 2019 - March 2020&#41;</h4>
                     <p>Filed and organized company documents, Created hundreds of work orders to authorize metal fabrication to factory,
                         Helped keep track of metal inventory using Global software,
                         Dealt with many professionals around the office to assist with various company projects,
