--- a/portfolio-converswim.html
+++ b/portfolio-converswim.html
@@ -18,7 +18,9 @@
     <body>
         <header>
             <div class="logo">
-                <img src="images/aaron logo.JPG" alt="">
+                <a href="index.html">
+                    <img src="images/aaron logo.JPG" alt="">
+                </a>
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class ="hamburger"></span>
