--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1 class="section__title section__title--intro">
                 Hello, I am <strong>Aaron Carbonell</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Front-End Dev</p>
+            <p class="section__subtitle section__subtitle--intro">UX Researcher</p>
             <img src="images/portpic.jpg" alt="picture of Aaron smiling" class="intro__img">
 
         </section>
@@ -86,16 +86,16 @@
         <!--About me-->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I Am</h2>
-            <p class="section__subtitle section__subtitle--about">Front End Developer based out of Seattle</p>
+            <p class="section__subtitle section__subtitle--about">UX Researcher based out of Seattle</p>
 
             <div class="about-me__body">
-                <p>Welcome to my portfolio website! My name is Aaron Carbonell. I am an aspiring front-end developer who has a deep passion for building 
-                beautiful, accessible, and easy-to-use technology for all kinds of people to use. In June 2023, I graduated from the University of Washington, 
-                Bothell, where I received my Bachelor's of Science in Computer Science and Software Engineering. My experience includes 3 years of Object-oriented 
-                programming with Java and C++, and also have intermediate experience with SQL, Javascript, HTML, CSS, and React framework. I am currently in search of 
-                Entry Level Front-End Software Engineering positions in (but not limited to) the Greater Seattle area.</p>
+                <p>Welcome to my portfolio website! My name is Aaron Carbonell. I am an aspiring UX Researcher who has a deep passion for exploring solutions to make 
+                our technology more accessible, easy to use, and equitable for all different kinds of users. In June 2023, I graduated from the University of Washington, 
+                Bothell, where I received my Bachelor's of Science in Computer Science and Software Engineering. As a result of my Senior year capstone and taking courses 
+                on User-Centered Design and Human Interaction Principles, I discovered that I have a deep passion for User Experience research. The idea of exploring the different 
+                technological access needs of users and helping create solutions for them as a career is a key driving force for my work. </p>
 
-               <p>Please feel free to look through this self-built page to learn more about my work and programming experience!</p> 
+               <p>Please feel free to look through this self-built page to learn more about my work and research experience!</p> 
 
             </div>
             <img src="images/2023_AaronUWGrad-3.jpg" alt="Aaron posing at the UW Quad" class="about-me__img">
@@ -105,19 +105,16 @@
         <!--My Projects-->
         <section class="my-work" id="work">
             <h2 class="section__title section__title--work">My Projects</h2>
-            <p class="section__subtitle section__subtitle--work">A collection of programming projects I've worked on</p>
+            <p class="section__subtitle section__subtitle--work">A collection of research projects I've worked on</p>
 
             <div class="portfolio">
-                <a href="portfolio-item.html" class="portolio__item">
-                    <img src="images/spotify-clone.JPG" alt="" class="portfolio__img">
-                </a>
 
                 <a href="portfolio-grdyrbt.html" class="portolio__item">
-                    <img src="images/grdyrbt.png" alt="" class="portfolio__img">
+                    <img src="images/toast.png" alt="" class="portfolio__img">
                 </a>
 
                 <a href="portfolio-merkle.html" class="portolio__item">
-                    <img src="images/merkle-tree.png" alt="" class="portfolio__img">
+                    <img src="images/Zensor Thumbnail.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <a href="portfolio-converswim.html" class="portolio__item">
