--- a/portfolio-grdyrbt.html
+++ b/portfolio-grdyrbt.html
@@ -38,20 +38,31 @@
         <!-- Introduction -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                The <strong> Greedy Robot </strong>
+                The <strong> New RMS </strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">How I learned the Greedy algorithm</p>
-            <img src="images/walle.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">Uncovering flaws in existing restaurant management systems</p>
+            <img src="images/worker.jpg" alt="" class="intro__img">
 
         </section>
 
         <div class="portfolio-item-individual">
-            <p>For a Data Structures & Algorithms course I took in Fall 2020, I programmed a virtual robot that can find the shortest distance to a treasure located on a 
-                2-dimensional grid. A caveat of this project was that the robot could not move diagonally, only up, down, left, and right.</p>
-            <img src="images/greedy-robot.jpg" alt="">
-            <p>To build the robot, I used C++ along with object-oriented design knowledge to create efficient code.</p>
-            <p>Throughout this project, I was able to fully understand and apply the concept of recursion to build an algorithm that calculates the robot's shortest possible moves
-                until it locates the treasure.
+            <p>For a Usability & User-Centered Design course I took in Winter 2022, I collaborated with a research team of 3 to explore how usable our existing restaurant
+                management systems (RMS) are for food workers in terms of collaboration with others, and to implement what users thought were lacking into a newly improved RMS prototype.</p>
+            <img src="images/rms.JPG" alt="">
+            <p>To kickstart the formative research phase, we put out an online survey meant to be taken by food workers anonymously and asks the following overarching research questions: </p>
+            <ul>
+                <li><p>Which position in the restaurant is using the system often?</p></li>
+                <li><p>Which restaurant management system do people use the most?</p></li>
+                <li><p>What are the barriers for the people working in the kitchen to use the management
+                    system?</p></li>
+                <li><p>What are the features of the system that we can improve and improve the user's
+                    experience?</p></li>
+            </ul>
+            <p>Based off the results found in our formative research, the evaluative research phase consisted of designing a newly improved RMS prototype based on feedback given (as depicted
+                above), recruiting participants to conduct usability studies with, and conducting our studies with participants to gain further insight on the usability of the RMS.
+            </p>
+            <p>The feedback from participants was generally very positive and indicated that they had found our RMS useful in the collaboration between different roles in the restaurants/bars.
+            This project was one of my first hands-on projects as a UX Researcher and taught me so much about how much thought and detail goes into putting a study together.
             </p>
         </div>
         
