--- a/portfolio-merkle.html
+++ b/portfolio-merkle.html
@@ -38,21 +38,33 @@
         <!-- Introduction -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                The <strong>Merkle Tree</strong>
+                This is<strong>Zensor</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">How I learned about cryptographic hashes</p>
-            <img src="images/crypto.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">A mental health journaling app</p>
+            <img src="images/zensor.JPG" alt="" class="intro__img">
 
         </section>
 
         <div class="portfolio-item-individual">
-            <p>In Winter 2020, I developed a merkle tree that contains cryptographic hashes. The goal of the merkle tree is to take input
-                that you cannot compute simply from knowing its output, meaning it is a one-way function.
+            <p>In Spring 2022, I worked with a design team of 4 to explore the need of a mental health journaling app meant to be used by
+            college students.
             </p>
-            <img src="images/merkle-tree.png" alt="">
-            <p>I built the merkle tree using C++ and background knowledge on the properties of the tree.</p>
-            <p>Throughout this project, I was able to gain valuable insight into cryptocurrency standards and the importance of
-                making sure that inputs cannot be computed from the output.
+            <img src="images/Zensor Thumbnail.jpg" alt="">
+            <p>The formative phase of our research focused on exploring the key pain points college students face when dealing with various
+                mental health issues such as stress, depression, and anxiety all while having to juggle academic responsibilities. To gather results,
+                we conducted one-on-one interviews with college students ranging from age 18-22 and have either been self or clinically diagnosed with
+                some type of mental health issue. 
+
+                After conducting preliminary interviews, the evaluative phase consisted of designing a hi-fidelity prototype of a mental health journaling app 
+                called Zensor which included the following key features retreived from our interviews: 
+                <li><p>Jot down thoughts and feelings throughout the day</p></li>
+                <li><p>Scheduling an appointment with a therapist</p></li>
+                <li><p>Listen to calming ambient music when overwhelmed</p></li>
+            </p>
+            <p>We were able to conduct usability studies with 5 college students and received generally positive feedback about the app's usability and feasibility.
+                Most points of feedback revolved around placing more emphasis on quick solutions that users can actually rely on during stressful events such as panic attacks
+                and smoothening out interactions with the scheduling interface. Overall, I learned a lot about Figma prototyping and planning out usability studies during this 
+                project. 
             </p>
         </div>
         
