--- a/portfolio-converswim.html
+++ b/portfolio-converswim.html
@@ -64,7 +64,8 @@
                 and database to support image customization requests. My recommendation is React (with Javascript, HTML,
                 and CSS) to develop the UI. To support image requests, I would utilize a combination of an object storage
                 system such as Amazon S3 with a NoSQL database such as MongoDB to handle image history queries. These
-                next steps yield a great project for capstone students to take on in the future.  
+                next steps yield a great project for capstone students to take on in the future. Please feel free to check out
+                the prototype <a href="https://www.figma.com/file/HhgF9G1Jmvd26UmbAlidoX/Converswim-(Community)?type=design&mode=design&t=QWLcZj6ah08MToWP-1">here!</a>
             </p>
         </div>
         
