--- a/portfolio-merkle.html
+++ b/portfolio-merkle.html
@@ -65,6 +65,8 @@
                 Most points of feedback revolved around placing more emphasis on quick solutions that users can actually rely on during stressful events such as panic attacks
                 and smoothening out interactions with the scheduling interface. Overall, I learned a lot about Figma prototyping and planning out usability studies during this 
                 project. 
+
+                Please feel free to check out the prototype <a href="https://www.figma.com/file/XsKUotLe9cbakqCn26ukRI/Zensor-(Community)?type=design&node-id=0%3A1&mode=design&t=QWLcZj6ah08MToWP-1">here!</a>
             </p>
         </div>
         
