--- a/portfolio-grdyrbt.html
+++ b/portfolio-grdyrbt.html
@@ -10,7 +10,7 @@
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
         <!--Replace later with own fonts if desired-->
-        <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@356&display=swap|Lato&subset=latin,latin-ext rel='stylesheet" rel="stylesheet">
         
         <link rel="stylesheet" href="css/style.css">
 
@@ -46,10 +46,15 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>For a Usability & User-Centered Design course I took in Winter 2022, I collaborated with a research team of 3 to explore how usable our existing restaurant
-                management systems (RMS) are for food workers in terms of collaboration with others, and to implement what users thought were lacking into a newly improved RMS prototype.</p>
-            <img src="images/rms.JPG" alt="">
-            <p>To kickstart the formative research phase, we put out an online survey meant to be taken by food workers anonymously and asks the following overarching research questions: </p>
+            <h3>The Project</h3>
+            <p>For a Usability & User-Centered Design course I took in Winter 2022, we were assigned a project in which we were to explore technologies that specific user groups felt could be improved. 
+                I collaborated with a research team of 3 to explore how usable our existing restaurant management systems (RMS) are for food workers in terms of collaboration with others, and to implement 
+                what users thought was lacking into a newly improved RMS prototype.</p>
+            <img src="images/rms.JPG" alt="" class="thumbnail">
+            <h3>What I Did</h3>
+            <p>During the formative research phase, my role in the team as UX Researcher was first to gather data on improvements food workers felt could be made on existing RMS’ such as Toast or Clover, and 
+                then bring this information to the design team to inform their decisions for a new RMS prototype. In the evaluative phase of our study, my role was to conduct usability studies with our prototype with food workers ages 18-24.</p>
+            <p>To gather data during the formative research, I created and released an online survey meant to be taken by food workers anonymously and asks the following overarching research questions:</p>
             <ul>
                 <li><p>Which position in the restaurant is using the system often?</p></li>
                 <li><p>Which restaurant management system do people use the most?</p></li>
@@ -58,11 +63,13 @@
                 <li><p>What are the features of the system that we can improve and improve the user's
                     experience?</p></li>
             </ul>
-            <p>Based off the results found in our formative research, the evaluative research phase consisted of designing a newly improved RMS prototype based on feedback given (as depicted
-                above), recruiting participants to conduct usability studies with, and conducting our studies with participants to gain further insight on the usability of the RMS.
+            <p>During the evaluative research phase, I conducted moderated usability studies with a sample size of 5 research participants. These participants all indicated that they currently have a job in food service and utilized an RMS throughout 
+                their work day. The studies consisted of providing background to what the study is about, walking participants through the prototype, and having them complete a predetermined set of tasks. 
             </p>
-            <p>The feedback from participants was generally very positive and indicated that they had found our RMS useful in the collaboration between different roles in the restaurants/bars.
-            This project was one of my first hands-on projects as a UX Researcher and taught me so much about how much thought and detail goes into putting a study together.
+            <h3>Findings + What I learned</h3>
+            <p>If I was a UX Researcher for, say, Toast or Clover, I believe my research findings would provide very useful insight into how to improve the system’s key features. The feedback from participants was generally very positive and indicated 
+                that they had found our RMS useful in the collaboration between different roles in the restaurants/bars. This project was one of my first hands-on projects as a UX Researcher and taught me so much about how much thought and detail goes 
+                into putting a study together.
             </p>
         </div>
         
