--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -10,7 +10,7 @@
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
         <!--Replace later with own fonts if desired-->
-        <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@356&display=swap|Lato&subset=latin,latin-ext rel='stylesheet" rel="stylesheet">
         
         <link rel="stylesheet" href="css/style.css">
 
