--- a/portfolio-merkle.html
+++ b/portfolio-merkle.html
@@ -10,7 +10,7 @@
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
         <!--Replace later with own fonts if desired-->
-        <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@356&display=swap|Lato&subset=latin,latin-ext rel='stylesheet" rel="stylesheet">
         
         <link rel="stylesheet" href="css/style.css">
 
@@ -46,28 +46,32 @@
         </section>
 
         <div class="portfolio-item-individual">
+            <h3>The Project</h3>
             <p>In Spring 2022, I worked with a design team of 4 to explore the need of a mental health journaling app meant to be used by
             college students.
             </p>
-            <img src="images/Zensor Thumbnail.jpg" alt="">
-            <p>The formative phase of our research focused on exploring the key pain points college students face when dealing with various
+            <img src="images/Zensor Thumbnail.jpg" alt="" class="thumbnail">
+            <h3>What I Did</h3>
+            <p>The formative phase of my research focused on exploring the key pain points college students face when dealing with various
                 mental health issues such as stress, depression, and anxiety all while having to juggle academic responsibilities. To gather results,
                 we conducted one-on-one interviews with college students ranging from age 18-22 and have either been self or clinically diagnosed with
                 some type of mental health issue. 
 
                 After conducting preliminary interviews, the evaluative phase consisted of designing a hi-fidelity prototype of a mental health journaling app 
                 called Zensor which included the following key features retreived from our interviews: 
-                <li><p>Jot down thoughts and feelings throughout the day</p></li>
-                <li><p>Scheduling an appointment with a therapist</p></li>
-                <li><p>Listen to calming ambient music when overwhelmed</p></li>
+                <li>Jot down thoughts and feelings throughout the day</li>
+                <li>Scheduling an appointment with a therapist</li>
+                <li>Listen to calming ambient music when overwhelmed</li>
             </p>
-            <p>We were able to conduct usability studies with 5 college students and received generally positive feedback about the app's usability and feasibility.
-                Most points of feedback revolved around placing more emphasis on quick solutions that users can actually rely on during stressful events such as panic attacks
-                and smoothening out interactions with the scheduling interface. Overall, I learned a lot about Figma prototyping and planning out usability studies during this 
-                project. 
+            <p>As the lead UX Researcher, I was able to conduct usability studies with 5 college students and received generally positive feedback about the app's usability and feasibility.
+            </p>
+            <h3>Findings + What I learned</h3>
+            <p>Most points of feedback revolved around placing more emphasis on quick solutions that users can actually rely on during stressful events such as panic attacks
+                and smoothening out interactions with the scheduling interface. Overall, I learned a lot about Figma prototyping and planning out moderated usability studies during this project. If Zensor were an actual company, I believe that my research 
+                findings would provide very useful insight to help create a marketable product that will help college students improve their mental health which is proven to be a very hard 
+                thing to prioritize with all of the responsibilities that they have to juggle.  
 
-                Please feel free to check out the prototype <a href="https://www.figma.com/file/XsKUotLe9cbakqCn26ukRI/Zensor-(Community)?type=design&node-id=0%3A1&mode=design&t=QWLcZj6ah08MToWP-1">here!</a>
-            </p>
+                Please feel free to check out the prototype <a href="https://www.figma.com/file/XsKUotLe9cbakqCn26ukRI/Zensor-(Community)?type=design&node-id=0%3A1&mode=design&t=QWLcZj6ah08MToWP-1">here!</a></p>
         </div>
         
 
