--- a/portfolio-converswim.html
+++ b/portfolio-converswim.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang ="en"> 
+
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content="width=device-width, initial-scale=1.0"> <!-- makes sure content is visible on mobile phones-->
@@ -10,7 +11,7 @@
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
         <!--Replace later with own fonts if desired-->
-        <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@356&display=swap|Lato&subset=latin,latin-ext rel='stylesheet" rel="stylesheet">
         
         <link rel="stylesheet" href="css/style.css">
 
@@ -46,25 +47,33 @@
         </section>
 
         <div class="portfolio-item-individual">
+            <h3>The Project</h3>
             <p>For my senior year capstone, I had the opportunity to work alongside Annuska Zolyomi to design an application called Converswim, 
                 a conversation reflection tool meant to be used by autistic adults. The motivation to develop this app came from prior research 
                 conducted by Zolyomi which explored the challenges that autistic adults face in reading emotion, body language, and other non-verbal social cues
                 when it comes to conversating with neurotypical individuals.
             </p>
-            <img src="images/swimlane.JPG" alt="">
-            <p>Most of my capstone work was done in the design phase, in which I was able to conduct several usability studies
-                with a paper-prototype that demonstrates initial screen designs and intended interactions of the application.
-                During our research, our goal was to acquire data on the usability of the application, feature usage, and overall
-                first impressions. My research team consisting of Professor Zolyomi, Hiba Hasan, a Psychology student at UW
-                Bothell, and I received insightful feedback on how to continually optimize the app to assure that the application
-                suits our target users’ needs.
-                </p>
-            <p>The next steps of this project would be to start implementing the prototype into a
-                functional web application. This would entail choosing an appropriate framework to develop the user interface
-                and database to support image customization requests. My recommendation is React (with Javascript, HTML,
-                and CSS) to develop the UI. To support image requests, I would utilize a combination of an object storage
-                system such as Amazon S3 with a NoSQL database such as MongoDB to handle image history queries. These
-                next steps yield a great project for capstone students to take on in the future. Please feel free to check out
+            <img src="images/swimlane.JPG" alt="" class="thumbnail">
+            <h3>What I did</h3>
+            <p>Most of my capstone work was done in the design phase, in which I was able to conduct several usability studies with a paper-prototype that demonstrates 
+                initial screen designs and intended interactions of the application. Through an online flyer, I recruited paired participants in which one or both parties 
+                identified as having some functioning form of autism. During my research, the goal was to acquire data on the usability of the application, feature usage, 
+                and overall first impressions. 
+            </p>
+            <h3>What I learned + Findings</h3>
+            <p>
+                My research team, consisting of Professor Zolyomi, Hiba Hasan, a Psychology student at UW Bothell, and I received insightful feedback on how to continually 
+                optimize the app to ensure that the application suits our target users’ needs. The following are the quantitative and qualitative results we found on key feature usage: 
+
+                    <li>75% of participants utilized “Create” feature</li>
+                    <li>75% of participants utilized “Text” feature</li>
+                    <li>50% of participants utilized “More Icons” button</li>
+                    <li>Desired feature to add more “levels” to conversation board</li>
+                    <li>Overall desire for a tutorial walkthrough for first time users</li>
+            </p>
+            <p>If Converswim were an actual company, I believe that my research would provide groundbreaking insight into how the usability, feasibility, and viability of the product can 
+                be improved especially in the early stages of its design. This project helped me gain insight into the technicalities of leading an entire usability study on my own, and 
+                just how important it is to keep key user personas in mind when designing interfaces. Please feel free to check out
                 the prototype <a href="https://www.figma.com/file/HhgF9G1Jmvd26UmbAlidoX/Converswim-(Community)?type=design&mode=design&t=QWLcZj6ah08MToWP-1">here!</a>
             </p>
         </div>
